Mejorando los icons de social media

--- a/index.html
+++ b/index.html
@@ -132,18 +132,18 @@
             <h6 class="socialNetworks__title">Redes Sociales</h6>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>
+                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin2.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>
 
-                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube2.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
                 <a href="#" class="iconsSocialNetworks__item" ><img src="
-                    img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
+                    img/facebook2.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter2.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram2.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp2.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
             </div>
 
             <div class="main-modal">
