Añadiendo la mejora en mi index.htm l esta consiste en hacer un card review

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article"> <!-- BLOCK article -->
-                <h3 class="article__title">¿Qué es HTML5?</h3>
+                <h1 class="article__title">¿Qué es HTML5?</h1>
                 
                 <img class="article__img" src="img/logo_html5.png" alt="article-img_html">
 
@@ -67,11 +67,26 @@
                     <b class="font-bold">HTML</b>, es un lenguaje para el marcado de la información de nuestra website <b class="font-bold">(página web)</b>.
                 </span>
 
-                <p class="paragraph paragraph--section-bigDevice">
+                <div class="article-card">
+                    <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="main icon card" class="article-card__img">
+
+                    <div class="info-card">
+                        <h2 class="info-card__title">HTML un lenguaje de una historia increible y emocionante</h2>
+                        <p class="info-card__desc">
+                            HTML un lenguaje amado por unos y no tan comprendido por otros. Nació en 1991 gracias al Científico <b class="font-bold">Tim Berners-Lee.</b>
+                        </p>
+                    </div>
+
+                    <div class="info-autor">
+                        <img src="img/myPhotoFacebook.jpg" alt="icon my photo" class="info-autor__img">
+                    </div>
+                </div>
+
+                <!--<p class="paragraph paragraph--section-bigDevice">
                     HTML un lenguaje amado por unos y no tan comprendido por otros. Nació en 1991 gracias al Científico <b class="font-bold">Tim Berners-Lee.</b>
                 </p>
 
-                <p class="paragraph paragraph--section-bigDevice"> <!-- BLOCK -->
+                <p class="paragraph paragraph--section-bigDevice"> 
                     Cuando pensamos en <b class="font-bold">HTML</b>, hablamos de un lenguaje, que no es un lenguaje de programación, y lo sé suena algo confuso, pero vamos a explicar esto. Hay muchas personas que defienden a capa y espada que HTML es un <b class="font-bold">Lenguaje de programación</b> y otros dicen que es solo un <b class="font-bold">lenguaje procesado por el navegador.</b>
                 </p>
 
@@ -89,7 +104,7 @@
 
                 <p class="paragraph paragraph--section-bigDevice">
                     En conclusión, <b class="font-bold">HTML</b>, es un lenguaje muy importante para la Web. 
-                </p>
+                </p>-->
             </article>    
         </section>
 
