Mejorando el card colocando estilos

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
 
                     <div class="info-autor">
                         <img src="img/myPhotoFacebook.jpg" alt="icon my photo" class="info-autor__img">
+
+                        <div class="autor-date">
+                            <h3 class="autor-date__title">Hairton Mayhuay</h3>
+                            <span class="autor-date__full-date">
+                              19 Sep 2020
+                            </span>
+                        </div>
+
+                        <img src="https://www.flaticon.com/svg/static/icons/svg/2413/2413446.svg" alt="" class="info-autor__icon iconShow">
                     </div>
                 </div>
 
@@ -136,7 +145,7 @@
         <span class="footer__copy-right">Copyright (c) 2020 por Hairton Mayhuay</span>
 
         <div class="socialCode"> <!-- BLOCK socialCode -->
-                <h6 class="socialCode__title">Mi código</h6>
+                <h5 class="socialCode__title">Mi código</h5>
 
                 <a class="socialCode__codepen-link" href="https://codepen.io/dashboard/" target="_blank" class="codepen">codepen.io</a>
                     
@@ -144,7 +153,7 @@
         </div>
 
         <div class="socialNetworks"> <!-- BLOCK socialNetworks -->
-            <h6 class="socialNetworks__title">Redes Sociales</h6>
+            <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
                 <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
@@ -165,7 +174,7 @@
 
             <div class="main-modal">
                 <div class="modal-box">
-                    <h1 class="modal-box__title"></h1>
+                    <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
                     <span class="modal-box__close">&times;</span>
