integrando el article-review una mejora para mostrar mis articulos

--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h3 class="article__title">Blog Tech</h3>
+                <h2 class="article__title">Blog Tech</h2>
 
                 <img src="img/icon-blog-tech.png" alt="icon blog tech" class="article__img">
 
@@ -68,6 +68,43 @@
 
 
                 <div class="main-blog">
+                    <div class="blog-info">
+                        <h3 class="blog-info__title" id="myOpinionHTML-info-blog">HTML un lenguaje con una historia increible y emocionante</h3>
+
+                        <span class="blog-info__autor">
+                            <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr;
+                            <b class="font-bold font-bold--infoBlog">Fecha: </b> --/09/2020
+                        </span>
+
+                        <img src="" alt="" class="article__img">
+
+                        <p class="paragraph paragraph--section-bigDevice">
+                            HTML un lenguaje amado por unos y no tan comprendido por otros. Nació en 1991 gracias al Científico <b class="font-bold">Tim Berners-Lee.</b>
+                        </p>
+
+                        <p class="paragraph paragraph--section-bigDevice">
+                            Ahora bien, esa historia es para otro momento si bien es cierto <b class="font-bold">HTML Y LA WEB</b> nacierón juntas ambas tienen una importancia fundamental en el mundo moderno del desarrollo web.
+                        </p>
+
+                        <p class="paragraph paragraph--section-bigDevice">
+                            Algunos desarrolladores / programadores novatos opinan que html es un simple lenguaje, sin importancia y que estan fácil de aprender ya que solo tiene <b class="font-bold">etiquetas (tags)</b>. Dichas afirmaciones no son del todo ciertas, explicaré mis razones.
+                        </p>
+
+                        <p class="paragraph paragraph--section-bigDevice">
+                            <b class="font-bold">HTML no solo es semántica sino también un conjunto de API's</b>. La nueva versión de <b class="font-bold">HTML</b>, la cual es <b class="font-bold">HTML5</b>, tiene mejoras en la semántica como por ejemplo etiquetas que permiten una mayor comprensión de la estructuración de nuestra website.
+                            <b class="font-bold">"header, nav, section, article, aside, footer, entre otros"</b>. Además trae consigo los formularios.
+                        </p>
+
+                        <p class="paragraph paragraph--section-bigDevice">
+                            Por otro lado, la API, de HTML5 trae consigo la capacidad de <b class="font-bold">guardar datos del lado del cliente.</b> usando <b class="font-bold">Web Store</b>, tenemos además la capacidad de dibujar con "JS", usando <b class="font-bold">canvas (tag)</b>. Tenemos además <b class="font-bold">Web Notifications</b>. entre muchas mejoras.
+                        </p>
+
+                        <p class="paragraph paragraph--section-bigDevice">
+                            HTML no es el lenguaje que conocimamos en los años 90, es muy distinto tiene una fascinante historia desde su creación en el <b class="font-bold">CERN</b>, hasta la especificación de su versión más actual. Merece una gran reverencia, si bien es cierto no es un lenguaje de programación como java, JS, python, PHP, pero su importancia hoy en dia no tiene cuestión.
+                        </p>
+                    </div>
+
+
                     <div class="blog-info">
                         <h3 class="blog-info__title" id="varCSS-info-blog">Variables en CSS</h3>
 
