--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
                     <b class="font-bold">HTML</b>, es un lenguaje para el marcado de la información de nuestra website <b class="font-bold">(página web)</b>.
                 </span>
 
+                <!-- BLOCK ARTICLE REVIEW -->
+
                 <div class="article-card">
-                    <img src="https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="main icon card" class="article-card__img">
+                    <img src="img/article_view_img_01.png" alt="main icon card" class="article-card__img">
 
                     <div class="info-card">
-                        <h2 class="info-card__title">HTML un lenguaje de una historia increible y emocionante</h2>
+                        <h2 class="info-card__title">HTML un lenguaje con una historia increible y emocionante</h2>
                         <p class="info-card__desc">
                             HTML un lenguaje amado por unos y no tan comprendido por otros. Nació en 1991 gracias al Científico <b class="font-bold">Tim Berners-Lee.</b>
                         </p>
@@ -87,7 +89,9 @@
                             </span>
                         </div>
 
-                        <img src="https://www.flaticon.com/svg/static/icons/svg/2413/2413446.svg" alt="" class="info-autor__icon iconShow">
+                        <a href="blog.html#myOpinionHTML-info-blog" class="info-autor__link">
+                            <img src="img/icon_right_icon_article_review.png" alt="icon article icon" class="info-autor__icon">
+                        </a>
                     </div>
                 </div>
 
