Mejorando mis enlaces a redes sociales y la seccion del blog

--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
     <div class="main-content">
         <section class="section">
             <article class="article">
-                <h2 class="article__title">Blog Tech</h2>
+                <h1 class="article__title">Blog Tech</h1>
 
                 <img src="img/icon-blog-tech.png" alt="icon blog tech" class="article__img">
 
@@ -69,7 +69,7 @@
 
                 <div class="main-blog">
                     <div class="blog-info">
-                        <h3 class="blog-info__title" id="myOpinionHTML-info-blog">HTML un lenguaje con una historia increible y emocionante</h3>
+                        <h2 class="blog-info__title" id="myOpinionHTML-info-blog">HTML un lenguaje con una historia increible y emocionante</h2>
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr;
@@ -106,7 +106,7 @@
 
 
                     <div class="blog-info">
-                        <h3 class="blog-info__title" id="varCSS-info-blog">Variables en CSS</h3>
+                        <h2 class="blog-info__title" id="varCSS-info-blog">Variables en CSS</h2>
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr;
@@ -133,7 +133,7 @@
                     </div>
 
                     <div class="blog-info">
-                        <h3 class="blog-info__title" id="arduino-info-blog">Arduino</h3>
+                        <h2 class="blog-info__title" id="arduino-info-blog">Arduino</h2>
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr; 
@@ -174,7 +174,7 @@
                     </div>
 
                     <div class="blog-info">
-                        <h3 class="blog-info__title" id="platzi-info-blog">Platzi</h3>
+                        <h2 class="blog-info__title" id="platzi-info-blog">Platzi</h2>
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr; 
@@ -221,7 +221,7 @@
                     </div>
 
                     <div class="blog-info">
-                        <h3 class="blog-info__title" id="api-info-blog">¿Qué es una API?</h2>
+                        <h2 class="blog-info__title" id="api-info-blog">¿Qué es una API?</h2>
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr; 
@@ -303,7 +303,7 @@
 
 
                     <div class="blog-info">
-                        <h3 class="blog-info__title" id="web-info-blog">¿Qué es la Web?</h2>
+                        <h2 class="blog-info__title" id="web-info-blog">¿Qué es la Web?</h2>
 
                         <span class="blog-info__autor">
                             <b class="font-bold font-bold--infoBlog">Autor: </b> Hairton Mayhuay &rArr; 
@@ -358,7 +358,7 @@
         <span class="footer__copy-right">Copyright (c) 2020 por Hairton Mayhuay</span>
 
         <div class="socialCode"> <!-- BLOCK socialCode -->
-                <h6 class="socialCode__title">Mi código</h6>
+                <h5 class="socialCode__title">Mi código</h5>
 
                 <a class="socialCode__codepen-link" href="https://codepen.io/dashboard/" target="_blank" class="codepen">codepen.io</a>
                     
@@ -366,10 +366,12 @@
         </div>
 
         <div class="socialNetworks"> <!-- BLOCK socialNetworks -->
-            <h6 class="socialNetworks__title">Redes Sociales</h6>
+            <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                
+                <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
                 <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
@@ -385,7 +387,7 @@
 
             <div class="main-modal">
                 <div class="modal-box">
-                    <h1 class="modal-box__title"></h1>
+                    <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
                     <span class="modal-box__close">&times;</span>
