--- a/index.html
+++ b/index.html
@@ -94,30 +94,6 @@
                         </a>
                     </div>
                 </div>
-
-                <!--<p class="paragraph paragraph--section-bigDevice">
-                    HTML un lenguaje amado por unos y no tan comprendido por otros. Nació en 1991 gracias al Científico <b class="font-bold">Tim Berners-Lee.</b>
-                </p>
-
-                <p class="paragraph paragraph--section-bigDevice"> 
-                    Cuando pensamos en <b class="font-bold">HTML</b>, hablamos de un lenguaje, que no es un lenguaje de programación, y lo sé suena algo confuso, pero vamos a explicar esto. Hay muchas personas que defienden a capa y espada que HTML es un <b class="font-bold">Lenguaje de programación</b> y otros dicen que es solo un <b class="font-bold">lenguaje procesado por el navegador.</b>
-                </p>
-
-                <p class="paragraph paragraph--section-bigDevice">
-                    Si bien es cierto cada uno de los bandos presentan buenas hipótesis, ambas son respetadas por la comunidad web. Ahora bien <b class="font-bold">HTML</b> si es un lenguaje, pero no de programación ya que para que sea considarado un lenguaje de programación debe permitir <b class="font-bold">probar un algoritmo</b>, <b class="font-bold">analizar datos</b> y <b class="font-bold">manipular datos</b> y a partir de ellos tomar decisiones.
-                </p>
-
-                <p class="paragraph paragraph--section-bigDevice">
-                    Por ello, HTML es un lenguaje que permite poder estructurar es decir definir cada cosa en nuestra página web. Ahora bien HTML no es el encargado de dar estilos sino de colocar cada elemento en su respectivo lugar.
-                </p>
-
-                <p class="paragraph paragraph--section-bigDevice">
-                    Sin embargo, esto no quiere decir que <b class="font-bold">HTML</b>, no tenga futuro ni propósito en el mundo del <b class="font-bold">Desarrollo Web.</b> HTML es súper importante ya que con el podemos hacer web muy bien estructuradas, con sentido y que puedan atraer a nuestro público. HTML será y seguirá siendo un lenguaje muy importante, más aún con su versión <b class="font-bold">a</b>, la cual trae mejoras no solo en la semántica sino también nuevas <b class="font-bold"><a href="blog.html#api-info-blog">API's</a></b>.
-                </p>
-
-                <p class="paragraph paragraph--section-bigDevice">
-                    En conclusión, <b class="font-bold">HTML</b>, es un lenguaje muy importante para la Web. 
-                </p>-->
             </article>    
         </section>
 
@@ -162,7 +138,7 @@
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
                 <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
                 
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>
+                <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
                 <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
