mejorando mi el modo oscuro y su conexion con los demas elementos de mi web, ademas de mejorar los cards su fondo su tipo de color y letra

--- a/news.html
+++ b/news.html
@@ -160,7 +160,7 @@
         <span class="footer__copy-right">Copyright (c) 2020 por Hairton Mayhuay</span>
 
         <div class="socialCode"> <!-- BLOCK socialCode -->
-                <h6 class="socialCode__title">Mi código</h6>
+                <h5 class="socialCode__title">Mi código</h5>
 
                 <a class="socialCode__codepen-link" href="https://codepen.io/dashboard/" target="_blank" class="codepen">codepen.io</a>
                     
@@ -168,10 +168,12 @@
         </div>
 
         <div class="socialNetworks"> <!-- BLOCK socialNetworks -->
-            <h6 class="socialNetworks__title">Redes Sociales</h6>
+            <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                
+                <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
                 <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
@@ -187,7 +189,7 @@
 
             <div class="main-modal">
                 <div class="modal-box">
-                    <h1 class="modal-box__title"></h1>
+                    <h6 class="modal-box__title"></h6>
                     <img src="" alt="my Photo" class="modal-box__img">
                     <p class="modal-box__desc"></p>
                     <span class="modal-box__close">&times;</span>
