mejorando la seccion de autor dandole un estilo de poster

--- a/info-author.html
+++ b/info-author.html
@@ -64,33 +64,11 @@
                </span>
 
                <div class="main-carousel">
-                   <div class="slides">
-                        <img class="slides__img" src="img/school.png" alt="icon studies">  
-                        <h4 class="slides__title">Educación</h4>
-                        <ol class="slides__list">
-                            <li class="slides__listItem">Universidad Norbert Wiener.</li>
-                            <li class="slides__listItem">Instituto Norbert Wiener.</li>
-                            <li class="slides__listItem">IDAT.</li>
-                        </ol>
-                   </div>
+                    <img class="slides__img slides" src="img/poster_estudios.png" alt="icon studies">  
 
-                   <div class="slides">
-                        <img class="slides__img" src="img/proyects_finished.png" alt="icon proyects">
-                        <h4 class="slides__title">Proyectos</h4>
-                        <ol class="slides__list">
-                            <li class="slides__listItem"><a class="slides__link" href="sensorMotor.html">Sensor Motor.</a></li>
-                        </ol>
-                   </div>
+                    <img class="slides__img slides" src="img/poster_proyects.png" alt="icon proyects">
 
-                   <div class="slides">
-                       <img src="img/hobbies-and-free-time.png" alt="icon hobbies" class="slides__img">
-                       <h4 class="slides__title">Hobbies</h4>
-                       <ol class="slides__list">
-                           <li class="slides__listItem">Proa Ayuda Social.</li>
-                           <li class="slides__listItem">Enseñar Programación Web.</li>
-                           <li class="slides__listItem"><a href="https://drive.google.com/file/d/1qzh1UCjbTfWSqRuqGagl-l2ZwQOeexXY/view?usp=sharing" target="_blank" class="slides__link">Utilizar Arduino.</a></li>
-                       </ol>
-                   </div>
+                    <img class="slides__img slides" src="img/poster_hobbies.png" alt="icon hobbies">
                </div>
             </article>
         </section>
