mejorando mi website en particular el aside las imagenes y la seccion del blog

--- a/blog.html
+++ b/blog.html
@@ -128,8 +128,10 @@
                         </p>
 
                         <p class="paragraph paragraph--section-bigDevice">
-                            Una variable es <b class="font-bold">cómo una caja en la cual podemos guardar lo que nosotros queramos</b> en la tématica actual, podemos guardar un <b class="font-bold">color, ancho, altura, tipo de letra, números, carácteres, Strings, etc</b>
+                            Una variable es <b class="font-bold">cómo una caja en la cual podemos guardar lo que nosotros queramos</b> en la tématica actual, podemos guardar un <b class="font-bold">color, ancho, altura, tipo de letra, números, carácteres, Strings, etc</b>. Veamos un breve ejemplo.
                         </p>
+                        
+                        <img src="./img/codigo_variables_css.png" alt="código de variables CSS" class="codes codes--bigDevice">
                     </div>
 
                     <div class="blog-info">
