--- a/card-2-sensorMotor.html
+++ b/card-2-sensorMotor.html
@@ -136,31 +136,45 @@
         </aside>
     </div>
 
+
     <footer class="footer"> <!-- BLOCK footer -->
         <span class="footer__copy-right">Copyright (c) 2020 por Hairton Mayhuay</span>
 
         <div class="socialCode"> <!-- BLOCK socialCode -->
-                <h6 class="socialCode__title">Mi código</h6>
+                <h5 class="socialCode__title">Mi código</h5>
 
                 <a class="socialCode__codepen-link" href="https://codepen.io/dashboard/" target="_blank" class="codepen">codepen.io</a>
+                    
                 <a class="socialCode__jsFiddle-link" href="https://jsfiddle.net/user/fiddles/all/" target="_blank" class="jsfiddle">JSFiddle</a>
         </div>
 
         <div class="socialNetworks"> <!-- BLOCK socialNetworks -->
-            <h6 class="socialNetworks__title">Redes Sociales</h6>
+            <h5 class="socialNetworks__title">Redes Sociales</h5>
 
             <div class="iconsSocialNetworks"> <!-- BLOCK iconsSocialNetworks-->
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/github.png" alt="icon github" class="iconsSocialNetworks__image iconGithub"></a>
+                
+                <!--<a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/linkedin.png" alt="icon linkedin" class="iconsSocialNetworks__image iconLinkeding"></a>-->
 
-                <a href="https://www.youtube.com/channel/UCDT1DvPPMn2Gk6Nc1EH74Qw?view_as=subscriber" target="_blank" class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image"></a>
+                <a href="#"class="iconsSocialNetworks__item"><img src="img/youtube.png" alt="icon youtube" class="iconsSocialNetworks__image iconYoutube"></a>
 
-                <a href="https://www.facebook.com/hairtonM.Web?ref=bookmarks" target="_blank" class="iconsSocialNetworks__item" ><img src="img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image"></a>
+                <a href="#" class="iconsSocialNetworks__item" ><img src="
+                    img/facebook.png" alt="icon facebook" class="iconsSocialNetworks__image iconFacebook"></a>
 
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/twitter.png" alt="icon twitter" class="iconsSocialNetworks__image iconTwitter"></a>
 
-                <a href="#" target="_blank" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/instagram.png" alt="icon instagram" class="iconsSocialNetworks__image iconImstagram"></a>
 
-                <a href="https://api.whatsapp.com/send?phone=51920803441&text=Hola! Mucho gusto%20quisiera%20contactarte" target="_blank" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image"></a>
+                <a href="#" class="iconsSocialNetworks__item"><img src="img/whatsapp.png" alt="icon whatsapp" class="iconsSocialNetworks__image iconWhatsapp"></a>
+            </div>
+
+            <div class="main-modal">
+                <div class="modal-box">
+                    <h6 class="modal-box__title"></h6>
+                    <img src="" alt="my Photo" class="modal-box__img">
+                    <p class="modal-box__desc"></p>
+                    <span class="modal-box__close">&times;</span>
+                </div>
             </div>
         </div>
 
