--- a/proyects.html
+++ b/proyects.html
@@ -79,7 +79,14 @@
         </section>
 
         <aside class="aside">
-        
+            <div class="main-codes">
+                <div class="codes-img-aside">
+                    <img src="./img/blink_led_codigo_arduino.png" alt="codigo Arduino blink led" class="">
+                </div>
+                <div class="codes-img-aside">
+                    <img src="./img/blink_led_2_codigo_arduino.png" alt="codigo blink led II arduino" class="">
+                </div>
+            </div>
         </aside>
     </div>
 
